# Redis-Analog

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  server.cpp  server.h  storage.cpp  storage.h
tests/: CMakeLists.txt  logger_test.cpp  server_test.cpp  storage_test.cpp
